--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,10 @@ environment:
 dependencies:
   cached_network_image: ^3.3.0
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.23.0
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.1.0
   flutter_hooks: ^0.20.3
   freezed: ^2.4.5
   freezed_annotation: ^2.4.1
@@ -36,6 +38,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - .env
 
 flutter_gen:
   output: lib/utils/gen/
