--- a/.github/workflow/check.yml
+++ b/.github/workflow/check.yml
@@ -7,6 +7,8 @@ on:
     paths-ignore:
       - '**.md'
   pull_request:
+    branches:
+        - develop
     paths-ignore:
       - '**.md'
   workflow_dispatch:
