--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^5.1.0
   flutter_hooks: ^0.20.3
+  flutter_svg: ^2.0.9
+  font_awesome_flutter: ^10.6.0
   freezed: ^2.4.5
   freezed_annotation: ^2.4.1
   hooks_riverpod: ^2.4.6
@@ -25,6 +27,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.6
+  flutter_gen_runner: ^5.3.2
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
@@ -36,9 +39,9 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/icons/
-    - assets/images/
-    - .env
+      - assets/icons/
+      - assets/images/
+      - .env
 
 flutter_gen:
   output: lib/utils/gen/
