--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,19 +19,24 @@ dependencies:
   flutter_svg: ^2.0.9
   freezed: ^2.4.5
   freezed_annotation: ^2.4.1
+  go_router: ^12.1.1
   hooks_riverpod: ^2.4.6
   intl: ^0.18.1
   json_annotation: ^4.8.1
+  riverpod_annotation: ^2.3.3
 
 
 dev_dependencies:
   build_runner: ^2.4.6
+  build_verify: ^3.1.0
   flutter_gen_runner: ^5.3.2
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  go_router_builder: ^2.3.4
   json_serializable: ^6.7.1
   pedantic_mono: any
+  riverpod_generator: ^2.3.9
 
 
 flutter:
