--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   cached_network_image: ^3.3.0
   cupertino_icons: ^1.0.2
+  email_validator: ^2.1.17
   firebase_core: ^2.23.0
   flutter:
     sdk: flutter
