--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_hooks: ^0.20.3
+
+  flutter_localizations:
+    sdk: flutter
   flutter_svg: ^2.0.9
   freezed: ^2.4.5
   freezed_annotation: ^2.4.1
