--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 
 dependencies:
   cached_network_image: ^3.3.0
+  cloud_firestore: ^4.13.6
   connectivity_plus: ^5.0.2
   cupertino_icons: ^1.0.2
   email_validator: ^2.1.17
