--- a/.github/workflow/check.yml
+++ b/.github/workflow/check.yml
@@ -1,123 +1,107 @@
-# # ワークフロー名を定義(任意の名称)
-# name: check
-
-# # トリガーを定義
-# on:
-#   # プルリク作成がトリガー(GitHub Actionsが実行される)となる
-#   pull_request:
-#     # プルリク作成時とプルリクにコミットが行われた時
-#     types: [opened, synchronize]
-#     # 対象ブランチを指定
-#     branches:
-#       - develop
-
-#   # GitHubページから手動で実行できる
-#   workflow_dispatch:
-
-# # 実行するジョブを定義
-# jobs:
-#   # ジョブ名を設定
-#   flutter_analyze:
-
-#     # ジョブを実行する仮想ホストマシンタイプ
-#     runs-on: ubuntu-latest
-
-#     # タイムアウト時間を設定
-#     timeout-minutes: 5
-
-#     # steps配下に実行したいアクションを定義します。(usesもしくはrunを使用することになると思います)
-#     # uses ・・・ GitHubやサードパーティで用意されているactionを使用できます
-#     # run ・・・ 実行コマンド
-#     steps:
-#     # 該当リポジトリにチェックアウト
-#       - name: checkout
-#         uses: actions/checkout@v4
-
-#       # flutterインストール（キャッシュする）
-#       - name: flutter cache
-#         uses: subosito/flutter-action@v2
-#         with:
-#           flutter-version: "3.16.0"
-#           channel: "stable"
-#           cache: true
-#           cache-key: flutter
-#           cache-path: ${{ runner.tool_cache }}/flutter
-
-#       - name: install Flutter
-#         uses: subosito/flutter-action@v2
-#         with:
-#           flutter-version: "3.16.0"
-#           channel: "stable"
-
-#       - name: Run flutter version
-#         run: flutter --version
-
-#       - name: Run flutter pub get
-#         run: flutter pub get
-
-#       - name: Install matcher
-#         run: echo "::add-matcher::.github/analyzer-problem-matcher.json"
-
-#       - name: Run flutter analyze
-#         shell: bash
-#         run: |
-#           flutter analyze | tee ./flutter_analyze_report.txt
-
-#       - name: Remove matcher
-#         if: always()
-#         run: echo "::remove-matcher owner=dart-analyzer::"
-
-#       - name: Setup Ruby
-#         uses: ruby/setup-ruby@v1
-#         if: always()
-#         with:
-#           ruby-version: '3.2'
-#           bundler-cache: true
-
-#       - name: Danger
-#         uses: MeilCli/danger-action@1996610a4c089e3a79bf3131a70c3c1b311e32f9
-#         if: always()
-#         with:
-#           plugins_file: 'Gemfile'
-#           install_path: 'vendor/bundle'
-#           danger_file: 'Dangerfile'
-#           danger_id: 'danger-pr'
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: check
 
 on:
   push:
-    branches: [ "develop" ]
+    branches:
+      - main
+    paths-ignore:
+      - '**.md'
   pull_request:
-    branches: [ "develop" ]
+    paths-ignore:
+      - '**.md'
   workflow_dispatch:
 
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
+
 jobs:
-  build:
+  analyze:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
-
+    timeout-minutes: 30
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      # Note: This workflow uses the latest stable version of the Dart SDK.
-      # You can specify other versions if desired, see documentation here:
-      # https://github.com/dart-lang/setup-dart/blob/main/README.md
-      # - uses: dart-lang/setup-dart@v1
-      - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
+      - name: Run pre-process script
+        shell: bash
+        env:
+          PREPROCESS_SCRIPT_BASE64: ${{ secrets.PREPROCESS_SCRIPT_BASE64 }}
+        run: |
+          if [ -n "$PREPROCESS_SCRIPT_BASE64" ]; then
+            echo $PREPROCESS_SCRIPT_BASE64 | base64 --decode > ./pre-process.sh && bash ./pre-process.sh
+          fi
 
-      - name: Install dependencies
-        run: dart pub get
+      - name: Install Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+          cache: true
 
-      # Uncomment this step to verify the use of 'dart format' on each commit.
-      # - name: Verify formatting
-      #   run: dart format --output=none --set-exit-if-changed .
+      - name: Run flutter version
+        run: flutter --version
 
-      # Consider passing '--fatal-infos' for slightly stricter analysis.
-      - name: Analyze project source
-        run: dart analyze
+      - name: Run flutter pub get
+        run: flutter pub get
+
+      - name: Install matcher
+        run: echo "::add-matcher::.github/analyzer-problem-matcher.json"
+
+      - name: Run flutter analyze
+        shell: bash
+        run: |
+          flutter analyze | tee ./flutter_analyze_report.txt
+
+      - name: Remove matcher
+        if: always()
+        run: echo "::remove-matcher owner=dart-analyzer::"
+
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        if: always()
+        with:
+          ruby-version: '3.2'
+          bundler-cache: true
+
+      - name: Danger
+        uses: MeilCli/danger-action@1996610a4c089e3a79bf3131a70c3c1b311e32f9
+        if: always()
+        with:
+          plugins_file: 'Gemfile'
+          install_path: 'vendor/bundle'
+          danger_file: 'Dangerfile'
+          danger_id: 'danger-pr'
+        env:
+          DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  # test:
+  #   runs-on: ubuntu-latest
+  #   timeout-minutes: 30
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
+
+  #     - name: Run pre-process script
+  #       shell: bash
+  #       env:
+  #         PREPROCESS_SCRIPT_BASE64: ${{ secrets.PREPROCESS_SCRIPT_BASE64 }}
+  #       run: |
+  #         if [ -n "$PREPROCESS_SCRIPT_BASE64" ]; then
+  #           echo $PREPROCESS_SCRIPT_BASE64 | base64 --decode > ./pre-process.sh && bash ./pre-process.sh
+  #         fi
+
+  #     - name: Install Flutter
+  #       uses: subosito/flutter-action@v2
+  #       with:
+  #         channel: 'stable'
+  #         cache: true
+
+  #     - name: Run flutter version
+  #       run: flutter --version
+
+  #     - name: Run flutter pub get
+  #       run: flutter pub get
+
+  #     - name: Run flutter test
+  #       run: flutter test
