--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   freezed: ^2.4.5
   freezed_annotation: ^2.4.1
   go_router: ^12.1.1
+  google_sign_in: ^6.2.1
   hooks_riverpod: ^2.4.6
   intl: ^0.18.1
   json_annotation: ^4.8.1
