--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,17 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^2.0.9
+  font_awesome_flutter: ^10.6.0
   freezed: ^2.4.5
   freezed_annotation: ^2.4.1
   go_router: ^12.1.1
   google_sign_in: ^6.2.1
   hooks_riverpod: ^2.4.6
+  image: ^4.1.3
+  image_picker: ^1.0.5
   intl: ^0.18.1
   json_annotation: ^4.8.1
+  material_color_utilities: ^0.5.0
   riverpod_annotation: ^2.3.3
 
 
