--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   firebase_core: ^2.23.0
   flutter:
     sdk: flutter
+  flutter_config: ^2.0.2
   flutter_hooks: ^0.20.3
 
   flutter_localizations:
@@ -27,6 +28,7 @@ dependencies:
   freezed: ^2.4.5
   freezed_annotation: ^2.4.1
   go_router: ^12.1.1
+  google_maps_flutter: ^2.5.0
   google_sign_in: ^6.2.1
   hooks_riverpod: ^2.4.6
   image: ^4.1.3
