--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   email_validator: ^2.1.17
   firebase_auth: ^4.15.3
   firebase_core: ^2.23.0
+  firebase_storage: ^11.5.6
   flutter:
     sdk: flutter
   flutter_config: ^2.0.2
@@ -32,6 +33,7 @@ dependencies:
   google_sign_in: ^6.2.1
   hooks_riverpod: ^2.4.6
   image: ^4.1.3
+  image_cropper: ^5.0.1
   image_picker: ^1.0.5
   intl: ^0.18.1
   json_annotation: ^4.8.1
