--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   json_annotation: ^4.8.1
   material_color_utilities: ^0.5.0
   riverpod_annotation: ^2.3.3
+  table_calendar: ^3.0.9
   uuid: ^4.2.2
 
 
