--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 
 dependencies:
   cached_network_image: ^3.3.0
+  camerawesome: ^2.0.0+1
   cloud_firestore: ^4.13.6
   connectivity_plus: ^5.0.2
   cupertino_icons: ^1.0.2
@@ -38,6 +39,8 @@ dependencies:
   intl: ^0.18.1
   json_annotation: ^4.8.1
   material_color_utilities: ^0.5.0
+  open_file: ^3.3.2
+  path_provider: ^2.1.2
   riverpod_annotation: ^2.3.3
   table_calendar: ^3.0.9
   uuid: ^4.2.2
