--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -24,6 +24,14 @@
 		<string>????</string>
 		<key>NSPhotoLibraryUsageDescription</key>
 		<string></string>
+		<key>NSCameraUsageDescription</key>
+		<string>Your own description</string>
+
+		<key>NSMicrophoneUsageDescription</key>
+		<string>To enable microphone access when recording video</string>
+
+		<key>NSLocationWhenInUseUsageDescription</key>
+		<string>To enable GPS location access for Exif data</string>
 		<key>CFBundleURLTypes</key>
 		<array>
 			<dict>
