--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   freezed: ^2.4.5
   freezed_annotation: ^2.4.1
+  geolocator: ^10.1.0
   go_router: ^12.1.1
   google_maps_flutter: ^2.5.0
   google_sign_in: ^6.2.1
