--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
     "explorer.fileNesting.expand": false,
     "explorer.fileNesting.patterns": {
         "*.dart": "$(capture).g.dart, $(capture).freezed.dart"
-    }
+    },
+    "eslint.workingDirectories": [
+        { "mode": "auto" }
+    ]
 }
