--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,7 +77,7 @@ flutter_launcher_icons:
   ios: true
   image_path: "assets/icons/my-fave-app-icon.png"
   min_sdk_android: 21
-  remove_alpha_ios: false
+  remove_alpha_ios: true
   adaptive_icon_background: "#000000"
   adaptive_icon_foreground: "assets/icons/my-fave-android-icon.png"
 
